Uploading re-knit, updates to data collection
added 6 additional products with links in the spreadsheet.

--- a/Research Project/data.qmd
+++ b/Research Project/data.qmd
@@ -210,3 +210,7 @@ We wrote code to allow us to (mostly) template out our gathering of information 
 ## Insights from Collection and EDA 
 
 * 
+
+<!-- ```{r TryBothOnePaper}
+print("Hello,world!")
+``` -->
